<resources>
    <string name="app_name">Fragments</string>
    <string name="button_next">Next</string>
    <string name="first_fragment_text">#1 Fragment</string>
    <string name="message_text">User</string>
    <string name="second_fragment_text">#2 Fragment</string>
    <string name="textview">TextView</string>
    <string name="greetings_text">Hello,</string>
    <string name="welcome_text">Welcome to Android!</string>
    <string name="background_color_text">Background color</string>
    <string name="android_image">Android Image</string>
    <string name="password_text">Password</string>
    <string name="background">Background</string>
    <string name="back_button_text">Back</string>
</resources>